# lyfe-supertask-knowledge

./: .env-example  .gitignore  PROJECT_DEVELOPMENT_CHECKLIST.mdc  README.md  TODO.md  TODO_RC.md  lyfeos_app_epics_2025.csv  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: PROJECT_DEVELOPMENT_CHECKLIST.mdc
archived/: json_format_compliance_success.md  levantar_da_cama_preprocessed.json  levantar_da_cama_template.md  levantar_da_cama_template_advanced.json  levantar_da_cama_template_beginner.json  sample_ari_analysis.json  sample_filled_template.md  simple_test_template.md  simple_test_template_advanced.json  simple_test_template_beginner.json
docs/: cursor_context_management.md  last.md  supertask-content-generation-rules.md
docs/TODOs/: TODO_RC.md  TODO_UI.md
docs/chats/: cursor_gather_project_documentation_con.md
docs/features/: 01-authorship-and-contextual-quotes.md  02-level-intents-and-novelty.md  03-sequence-profiles-and-engagement-hooks.md  04-cost-optimization-single-call-per-level.md  ari-persona-config-feature.md  ari-persona-integration-summary.md  cli-command-documentation-inconsistency-fix.md  comprehensive-content-coverage-system.md  configurable-narrative-sequence-feature.md  content-packaging-cli-feature.md  content-relevance-enrichment-system.md  implementation-summary-phase2.md  implementation-summary.md  knowledge-task-generator.md  markdown-file-processing-feature.md  mobile-optimized-schema-v1.1-feature.md  package-execution-logging-feature.md  progressive-difficulty-system-redesign.md  progressive-learning-narrative-system.md  prompts-auditing-feature.md  stage1-preprocessing-feature.md  stage3-generation-feature.md  supertask-difficulty-fix-01.md  supertask-narrative-01.md  supertask-testing-ui-feature.md  supertask-testing-ui-fix-01.md  system-simplification-v2.md
docs/implementation_summaries/: comprehensive_coverage_prd_compliance_fix.md  format_enforcement_analysis.md  mobile_schema_v1_1_implementation.md  narrative-generation_prompt-first-cost-optimized.md  project_overview_command_syntax_issue.md  rc_001_implementation_failure_analysis.md  rc_001_success_analysis.md  simplified_system_v2_success_analysis.md  stage1_preprocessing_hanging_tests.md  stage1_preprocessing_implementation.md  stage3_generation_implementation.md  supertask_generation_compliance_analysis.md
docs/manual/: cli-commands-and-parameters.md  project-context-summary.md  project-overview.md  work-directory-and-package-system.md
docs/reports/: README.md  json_format_compliance_success.md
src/config/: ari_persona.yaml  config.yaml  generation_prompts.yaml  llm_prompts.yaml  preprocessing_prompts.yaml  supertask_schema_v1.0.json  supertask_schema_v1.1.json
src/lyfe_kt/: __init__.py  cli.py  config_loader.py  content_analyzer.py  content_enrichment.py  content_packager.py  format_version_manager.py  input_validation.py  json_normalizer.py  logging_config.py  openai_client.py  output_validation.py  progressive_narrative.py  session_logger.py  simple_report.py  simplified_generator.py  stage1_functions.py  stage1_integration.py  stage1_preprocessing.py  stage3_generation.py
src/lyfe_supertask_knowledge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/templates/: knowledge_task_input_template.md
tests/: test_ari_persona_config.py  test_cli.py  test_cli_full_pipeline.py  test_config.py  test_config_loader.py  test_content_analyzer.py  test_generation_prompts.py  test_input_template.py  test_input_validation.py  test_json_normalizer.py  test_logging.py  test_openai_client.py  test_output_validation.py  test_package_structure.py  test_preprocessing_prompts.py  test_requirements.py  test_sequence_parser.py  test_stage1_functions.py  test_stage1_integration.py  test_stage1_preprocessing.py  test_stage3_generation.py
work/01_raw/: feature_knowledge_task.md
work_backup_20250716_163244/02_preprocessed/: sample_filled_template.md  sample_oracle_context.json
(+15 files in other folders)
